--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
+################## LOGGING #################
+
 #debug: true
 #logging:
 #  level:
@@ -5,6 +7,8 @@
 #    '[org.springframework.security]': DEBUG
 #    '[org.hibernate]': WARN
 #    '[org.apache.tomcat]': WARN
+
+############################################
 
 server:
   port: 9000
