--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -23,7 +23,8 @@ spring:
     username: postgres
     password: password
   flyway:
-    baseline-on-migrate: true # tmp do nothing
+    baseline-on-migrate: true
+    enabled: true  
   jpa:
     database: postgresql
     properties:
