--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -24,8 +24,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 HELP.md
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
+.mvn/
 
 ##############################
 ## Gradle
